welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:23: error: not found: value color
			faireV(color.YELLOW);
                               ^MethodsPicture:24: error: not found: value color
			faireV(color.RED);
                               ^MethodsPicture:25: error: not found: value color
			faireV(color.BLUE);
                               ^MethodsPicture:26: error: not found: value color
			faireV(color.GREEN);
                               ^