welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
def faireMotif={			
			def marquerSol(){
							baisseBrosse();
							leveBrosse();
								};
			def faireV(c:Color){
					setCouleurBrosse(c)
					avance();
					marquerSol();
					avance();
					gauche();
					avance();
					marquerSol();
					recule();
					droite();
					avance();
					marquerSol();
					avance();
					gauche();
				}
			faireV(color.YELLOW);
			faireV(color.RED);
			faireV(color.BLUE);
			faireV(color.GREEN);
}
}
